--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -61,6 +61,7 @@
       "labels": ["renovate/image", "dep/digest", "automerge"],
       "automerge": true,
     },
+    // matchPackagePatterns
     {
       "matchDatasources": ["docker"],
       "versioning": "regex:^(?<major>14)\\.(?<minor>\\d+)\\.(?<patch>\\d+)$",
@@ -70,7 +71,7 @@
     {
       "matchDatasources": ["docker"],
       "versioning": "regex:^(?<major>\\d+)-(?<minor>\\d+)-(?<patch>\\d+)$",
-      "matchPackagePatterns": ["^jupyter\/.+$"],
+      "matchPackagePatterns": ["^jupyter\\/.+$"],
       "automerge": true,
     },
     {
@@ -79,6 +80,22 @@
       "matchPackagePatterns": ["^altran1502\\/immich-.+$"],
       "automerge": true,
     },
+    {
+      "matchDatasources": ["docker"],
+      "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-ubuntu$",
+      "matchPackagePatterns": ["^zabbix\\/zabbix-.*$"],
+    },
+    {
+      "matchDatasources": ["docker"],
+      "versioning": "regex:^stable-(?<major>\\d{1})(?<minor>\\d{1})(?<patch>\\d{2}).*$",
+      "matchPackagePatterns": ["^jitsi\\/.*$"],
+    },
+    {
+      "matchDatasources": ["docker"],
+      "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-beta$",
+      "matchPackagePatterns": ["^penpot\\/.*$"],
+    },
+    // matchPackageNames
     {
       "matchDatasources": ["docker"],
       "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-postgres-tomcat$",
@@ -93,7 +110,7 @@
     },
     {
       "matchDatasources": ["docker"],
-      "versioning": "regex:^v(?<major>\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-\\d+\\.\\d+\\.\\d+$",
+      "versioning": "regex:^v(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-\\d+\\.\\d+\\.\\d+$",
       "matchPackageNames": ["netboxcommunity/netbox"],
       "automerge": true,
     },
@@ -213,36 +230,6 @@
     },
     {
       "matchDatasources": ["docker"],
-      "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-ubuntu$",
-      "matchPackageNames": ["zabbix/zabbix-server-pgsql"],
-      "automerge": true,
-    },
-    {
-      "matchDatasources": ["docker"],
-      "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-ubuntu$",
-      "matchPackageNames": ["zabbix/zabbix-snmptraps"],
-      "automerge": true,
-    },
-    {
-      "matchDatasources": ["docker"],
-      "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-ubuntu$",
-      "matchPackageNames": ["zabbix/zabbix-web-nginx-pgsql"],
-      "automerge": true,
-    },
-    {
-      "matchDatasources": ["docker"],
-      "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-ubuntu$",
-      "matchPackageNames": ["zabbix/zabbix/zabbix-agent"],
-      "automerge": true,
-    },
-    {
-      "matchDatasources": ["docker"],
-      "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-ubuntu$",
-      "matchPackageNames": ["zabbix/zabbix/zabbix-agent2"],
-      "automerge": true,
-    },
-    {
-      "matchDatasources": ["docker"],
       "versioning": "regex:^(?<major>\\d+)-(?<minor>\\d+)-(?<patch>\\d+)$",
       "matchPackageNames": ["diygod/rsshub"],
       "automerge": true,
@@ -263,30 +250,6 @@
       "matchDatasources": ["docker"],
       "versioning": "regex:^(?<major>\\d{4})\\.(?<minor>\\d{1,2})\\.(?<patch>\\d{1,2).*$",
       "matchPackageNames": ["alicevision/meshroom"],
-      "automerge": true,
-    },
-    {
-      "matchDatasources": ["docker"],
-      "versioning": "regex:^stable-(?<major>\\d{1})(?<minor>\\d{1})(?<patch>\\d{2}).*$",
-      "matchPackageNames": ["jitsi/web"],
-      "automerge": true,
-    },
-    {
-      "matchDatasources": ["docker"],
-      "versioning": "regex:^stable-(?<major>\\d{1})(?<minor>\\d{1})(?<patch>\\d{2}).*$",
-      "matchPackageNames": ["jitsi/prosody"],
-      "automerge": true,
-    },
-    {
-      "matchDatasources": ["docker"],
-      "versioning": "regex:^stable-(?<major>\\d{1})(?<minor>\\d{1})(?<patch>\\d{2}).*$",
-      "matchPackageNames": ["jitsi/jicofo"],
-      "automerge": true,
-    },
-    {
-      "matchDatasources": ["docker"],
-      "versioning": "regex:^stable-(?<major>\\d{1})(?<minor>\\d{1})(?<patch>\\d{2}).*$",
-      "matchPackageNames": ["jitsi/jvb"],
       "automerge": true,
     },
     {
