fix prep script (+8 squashed commit)
Squashed commit:

[01483c296] remove useless base version references from container apps

[fed8882d2] remove base version bs

[aebb73e5a] move alpine to v2

[d597bc5ac] fix nextcloud fpm in apps folder

[63f9ff598] remove non-fpm nextcloud

[16f9cfef7] no message

[4baf8a49d] some cleanup

[ab03f9947] build a new tiny alpine image

--- a/base/alpine/Dockerfile
+++ b/base/alpine/Dockerfile
@@ -1,36 +1,40 @@
-ARG VERSION
-FROM alpine:${VERSION}
+FROM alpine:3.17.0
+
+ARG CONTAINER_NAME
+ARG CONTAINER_VER
 
 USER root
 
 SHELL ["/bin/sh", "-o", "pipefail", "-c"]
 
-RUN apk update && apk add --no-cache ca-certificates tini curl nano wget bash unzip jq \
-  && \
-  addgroup apps -g 568 \
-  && \
-  adduser apps -u 568 -g 568 -D -S -H \
-  && \
-  mkdir -p /config \
-  && chown -R apps:apps /config \
-  && chmod -R 775 /config
-
 WORKDIR /app
-USER apps
+
+# hadolint ignore=DL3018
+RUN \
+     apk update && apk add --no-cache ca-certificates \
+  && addgroup apps -g 568 \
+  && adduser apps -u 568 -g 568 -D -S -H \
+  && mkdir -p /config \
+  && chown -R apps:apps /config \
+  && chmod -R 775 /config \
+  && chown -R apps:apps /app \
+  && chmod -R 775 /app \
+  && update-ca-certificates
 
 VOLUME [ "/config" ]
 
-ENTRYPOINT ["/sbin/tini", "--"]
-CMD ["echo", "'No can haz support yet. Chek bak l8r!'", "exit", "1337" ]
+USER apps
 
-LABEL "maintainer"="TrueCharts <info@truecharts.org>"
-LABEL "org.opencontainers.image.source"="https://github.com/truecharts/apps"
+COPY ./base/ubuntu/entrypoint.sh /entrypoint.sh
+COPY ./base/ubuntu/shim /etc/profile.d
 
+# iX NFS4_XDR WINACL ripped from toolkit ripped from TrueNAS SCALE 22.02.04
+COPY ./base/ubuntu/nfs4xdr/* /usr/sbin/
 
-ARG CONTAINER_NAME
-ARG CONTAINER_VER
 LABEL org.opencontainers.image.licenses="BSD-3-Clause"
 LABEL org.opencontainers.image.title="${CONTAINER_NAME}"
+LABEL "maintainer"="TrueCharts <info@truecharts.org>"
+LABEL "org.opencontainers.image.source"="https://github.com/truecharts/apps"
 LABEL org.opencontainers.image.url="https://truecharts.org/docs/charts/${CONTAINER_NAME}"
 LABEL org.opencontainers.image.version="${CONTAINER_VER}"
 LABEL org.opencontainers.image.description="Container for ${CONTAINER_NAME} by TrueCharts"
