install from kubernetes directly

--- a/apps/kubectl/Dockerfile
+++ b/apps/kubectl/Dockerfile
@@ -1,13 +1,20 @@
-FROM ghcr.io/truecharts/alpine:v3.17.0
+FROM tccr.io/truecharts/alpine:v3.17.0
 
 ARG TARGETPLATFORM
+ARG VERSION
 
 # hadolint ignore=DL3002
 USER root
 
 # hadolint ignore=DL3018
-RUN \
-    apk update && apk add --no-cache kubectl
+RUN apk update && apk add --no-cache curl \
+    curl -LO "https://dl.k8s.io/release/${VERSION}/bin/linux/amd64/kubectl" \
+	curl -LO "https://dl.k8s.io/release/${VERSION}/bin/linux/amd64/kubectl" \
+	echo "$(cat kubectl.sha256)  kubectl" | sha256sum --check \
+    install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl \
+	kubectl version --client --output=yaml \
+	apk del curl
+	
 
 USER apps
 
