add git to kubectl container

--- a/apps/kubectl/Dockerfile
+++ b/apps/kubectl/Dockerfile
@@ -7,7 +7,7 @@ ARG VERSION
 USER root
 
 # hadolint ignore=DL3018,DL4006
-RUN apk update && apk add --no-cache curl \
+RUN apk update && apk add --no-cache curl git \
     && curl -LO "https://dl.k8s.io/release/${VERSION}/bin/linux/amd64/kubectl" \
 	&& curl -LO "https://dl.k8s.io/release/${VERSION}/bin/linux/amd64/kubectl.sha256" \
 	&& echo "$(cat kubectl.sha256)  kubectl" | sha256sum -c \
