--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -284,7 +284,7 @@
     },
     {
       "matchDatasources": ["docker"],
-      "versioning": "regex:^(?<major>\\d*)(?<minor>\\d*)-jdk17$",
+      "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)-jdk17$",
       "matchPackageNames": ["jenkins/jenkins"],
       "automerge": true,
     },
