--- a/mirror/heimdall/Dockerfile
+++ b/mirror/heimdall/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/linuxserver/heimdall:2.5.5@sha256:1e69a80a4ac050fd7d3679aeff1489534de03d7a023cd5080156137b7a213126
+FROM linuxserver/heimdall:version-v2.5.5@sha256:a8033ace2107b498ac9dfcf0b95f0c1f0f54a0d980e0fd41abc8e816bf981dbc
 LABEL "org.opencontainers.image.source"="https://github.com/truecharts/containers"
 
 ARG CONTAINER_NAME
