--- a/mirror/minecraft-java17-alpine/Dockerfile
+++ b/mirror/minecraft-java17-alpine/Dockerfile
@@ -1,4 +1,4 @@
-FROM itzg/minecraft-server:2022.16.0-java11-openj9@sha256:dd00737eb2d98cd4c121bdd76043e56ffe87fad127c047643b937708386a0f1f
+FROM itzg/minecraft-server:2022.16.0-java17-alpine@sha256:46339d00454a13c6104c869c008a6a0804bbd935bb2a844cd339c34c25183dfc
 
 LABEL "org.opencontainers.image.source"="https://github.com/truecharts/containers"
 
